# bazel_go

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE.md  Makefile  README.md  WORKSPACE  go.work  go.work.sum  go_deps.bzl
cmd/: BUILD.bazel  get_message.go  go.mod  main.go  main_test.go
