package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/abitofhelp/bazel_go
# gazelle:exclude vendor
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bazel_go_lib",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/abitofhelp/bazel_go",
    deps = [],
)

go_binary(
    name = "bazel_go_cmd",
    embed = [":bazel_go_lib"],
)

go_test(
    name = "bazel_go_test",
    srcs = ["main_test.go"],
    embed = [":bazel_go_lib"],
    deps = ["@com_github_stretchr_testify//assert"],
)
