load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/abitofhelp/bazel_go/cmd
# gazelle:exclude vendor
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cmd_lib",
    srcs = [
        "get_message.go",
        "main.go",
    ],
    importpath = "github.com/abitofhelp/bazel_go/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cmd_test",
    srcs = ["main_test.go"],
    embed = [":cmd_lib"],
    visibility = ["//visibility:private"],
    deps = ["//cmd/vendor/github.com/stretchr/testify/assert"],
)
